# open_api_docs.yaml
@@ -1765,6 +1765,59 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ReviewPoint"
+  /api/quiz-questions/{questionId}/question:
+    delete:
+      tags:
+      - rest-quiz-question-controller
+      operationId: deleteQuestion
+      parameters:
+      - name: questionId
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/QuizQuestionAndAnswer"
+    patch:
+      tags:
+      - rest-quiz-question-controller
+      operationId: editQuestion
+      parameters:
+      - name: questionId
+        in: path
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/QuizQuestionAndAnswer"
+        required: true
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/QuizQuestionAndAnswer"
   /api/notes/{note}:
     get:
       tags:
@@ -2495,30 +2548,6 @@ paths:
                 type: array
                 items:
                   type: string
-  /api/quiz-questions/{questionId}/question:
-    delete:
-      tags:
-      - rest-quiz-question-controller
-      operationId: deleteQuestion
-      parameters:
-      - name: questionId
-        in: path
-        required: true
-        schema:
-          type: integer
-      responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                type: string
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/QuizQuestionAndAnswer"
 components:
   schemas:
     Circle:
